--- a/css/styles_sketch.css
+++ b/css/styles_sketch.css
@@ -12,6 +12,7 @@ body {
     background-image: linear-gradient(white 1px, transparent 1px), 
                       linear-gradient(to right, white 1px, transparent 1px);
     background-size: 20px 20px;
+
 }
 
 .container {
@@ -77,6 +78,40 @@ body {
     cursor: pointer;
 }
 
+ESTILOS MODAL
+.modal {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 300px; 
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+}
+
+/* Estilos para deshabilitar la interacción con el resto de la página */
+body.modal-open {
+    overflow: hidden;
+}
+
+/* Deshabilitar pointer events para el resto de la página, excepto el modal */
+body.modal-open *:not(.modal):not(.modal *) {
+    filter: blur(5px);
+    pointer-events: none;
+}
+
+
 /* HEADER */
 
 .header {
@@ -90,7 +125,13 @@ body {
 }
 
 .nombre-app h1 {
-    color: var(--w);
+    color: black;
+    margin-left: 20px;
+    
+}
+
+.container .perfil h2 {
+    color: black;
     margin-left: 20px;
     
 }
