--- a/css/styles_sketch.css
+++ b/css/styles_sketch.css
@@ -95,9 +95,11 @@ ESTILOS MODAL
 .modal-content {
     background-color: #fefefe;
     padding: 20px;
-    border: 1px solid #888;
+    
     width: 300px; 
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    
+    border: 2px dashed #000;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
 }
 
 /* Estilos para deshabilitar la interacción con el resto de la página */
