--- a/css/styles_sketch.css
+++ b/css/styles_sketch.css
@@ -9,14 +9,22 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
-    background-image: linear-gradient(white 1px, transparent 1px), 
-                      linear-gradient(to right, white 1px, transparent 1px);
+    background-image: linear-gradient(white 1px, transparent 1px),
+        linear-gradient(to right, white 1px, transparent 1px);
     background-size: 20px 20px;
     overflow-y: scroll;
     padding-right: 15px;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(9, 1fr);
+    gap: 3px;
 }
 
 .container {
+    grid-column: span 3 / span 3;
+    grid-row: span 7 / span 7;
+    grid-column-start: 3;
+    grid-row-start: 2;
     max-width: 800px;
     min-height: 60vh;
     margin: 5px auto;
@@ -114,29 +122,27 @@ ul {
 }
 
 .contenido-expandido {
-    display: none; /* Ocultar inicialmente */
+    display: none;
+    /* Ocultar inicialmente */
     padding: 10px;
     width: 90%;
     margin-top: 10px;
     background-color: #f0f0f0;
-  }
-  
-  /* Estilo para mostrar el contenido expandido cuando se hace hover */
+}
+
+/* Estilo para mostrar el contenido expandido cuando se hace hover */
 li:hover .contenido-expandido {
     display: block;
     transition: 1s ease-in-out;
 }
 
-.subtarea-input {
-    width: 90%;
-    border-radius: 3px;
-}
-
 .barra-progreso-container {
     position: relative;
-    width: 80%; /* Ajusta el ancho */
+    width: 80%;
+    /* Ajusta el ancho */
     height: 20px;
-    margin: 10px; /* Centra la barra de progreso */
+    margin: 10px;
+    /* Centra la barra de progreso */
     margin-top: 10px;
     border: black 1px solid;
     border-radius: 5px;
@@ -161,12 +167,12 @@ li:hover .contenido-expandido {
 
 .porcentaje {
     position: absolute;
-    right: 0; 
-    top: 0; 
+    right: 0;
+    top: 0;
     font-size: 15px;
     font-weight: bold;
     color: #333;
-    padding: 3px; 
+    padding: 3px;
 }
 
 /* Estilos para subtareas dentro de los elementos de tarea */
@@ -184,6 +190,7 @@ li:hover .contenido-expandido {
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 14px;
+    width: 90%;
 }
 
 /* Estilos para botones de subtareas */
@@ -197,240 +204,82 @@ li:hover .contenido-expandido {
     margin-left: 5px;
 }
 
-/* Estilos para el modal */
+/*estilos contenedores api*/
 
-#login-modal {
-    display: flex;
-    flex-direction: column;
-    position: absolute; /* Asegúrate de especificar una posición */
-    top: 50%; /* Centra verticalmente */
-    left: 50%; /* Centra horizontalmente */
-    transform: translate(-50%, -50%); /* Ajusta el centrado */
-    height: 65%;
-    width: 45%;
-    justify-content: center;
-    align-items: center;
-}
-
-.modal {
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.modal-content {
-    background-color: #fefefe;
+.api-container {
+    max-width: 800px;
+    min-width: 85%;
+    min-height: 60vh;
+    margin: 5px auto;
+    margin-bottom: 50px;
     padding: 20px;
-    width: 300px;
-    height: 300px;
+    background: #fff;
     border: 2px dashed #000;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 
-.sign-in , .sign-up {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+#api1 {
+    grid-column: span 2 / span 2;
+    grid-row: span 7 / span 7;
+    grid-row-start: 2;
 }
 
-#loginButton, #signupButton {
-    font-size: 16px;
-    color: black;
-    border: none;
-    cursor: pointer;
-    margin-top: 10px;
+#api2 {
+    grid-column: span 2 / span 2;
+    grid-row: span 7 / span 7;
+    grid-column-start: 6;
+    grid-row-start: 2;
 }
 
-/* Estilos para deshabilitar la interacción con el resto de la página */
-body.modal-open {
-    overflow: hidden;
-}
-
-/* Deshabilitar pointer events para el resto de la página, excepto el modal */
-body #content {
-    pointer-events: none;
-}
 
 /* HEADER */
 
 .header {
     background-color: white;
     padding: 10px 0;
+    margin-top: 5px;
+    grid-column: span 7;
+    /* Ajusta el número de columnas que quieres que ocupe */
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    border-radius: 5px;
+    border: 2px dashed #000;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
 }
 
-.nombre-app h1 {
-    color: black;
-    margin-left: 20px;
-    border: 2px dashed #000;
-    padding: 5px 10px;
-    border-radius: 5px;
+.nombre-app {
+    margin: 5px;
 }
 
-.container .perfil h2 {
-    color: black;
-    margin-left: 20px;
-}
-
-.menu ul {
+.nav-bar {
     display: flex;
     gap: 20px;
 }
 
-.menu ul li {
+.nav-bar-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-right: 10px;
 }
 
-.menu ul li a {
+.nav-bar a {
     text-decoration: none;
     color: black;
     font-weight: bold;
     font-size: 1.1rem;
     padding: 5px 10px;
-    border-radius: 5px;
-    border: 2px dashed #000;
-    animation: alternate;
-    transition:  1s ease-in-out;
+    transition: 1s ease-in-out;
 }
 
-.menu ul li a:hover {
-    background-color: white;
-}
-
+/* FOOTER */
 .pie_pagina {
-    display: flex;
-    flex-direction: column;
+    grid-column: span 7 / span 7;
+    grid-row-start: 9;
     align-items: center;
     justify-content: center;
-}
-
-/* Media queries para responsive design */
-
-/* Para desktop */
-
-@media (min-width: 769px) {
-    .header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 20px;
-        background-color: var(--purple);
-        color: var(--white);
-    }
-
-    .nombre-app h1 {
-        font-size: 24px;
-    }
-
-    .menu ul {
-        display: flex;
-        gap: 20px;
-        list-style-type: none;
-    }
-
-    .menu li {
-        font-size: 16px;
-    }
-
-    .menu a {
-        text-decoration: none;
-        color: var(--white);
-        transition: color 0.3s ease;
-    }
-
-    .menu a:hover {
-        color: var(--blue-light);
-    }
-}
-
-
-/* Para tablet */
-
-@media (max-width: 768px) {
-    .header {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 15px;
-        background-color: var(--purple);
-        color: var(--white);
-    }
-
-    .nombre-app h1 {
-        font-size: 20px;
-        margin-bottom: 10px;
-    }
-
-    .menu ul {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
-        justify-content: center;
-        list-style-type: none;
-    }
-
-    .menu li {
-        font-size: 14px;
-    }
-
-    .menu a {
-        text-decoration: none;
-        color: var(--white);
-        transition: color 0.3s ease;
-    }
-
-    .menu a:hover {
-        color: var(--blue-light);
-    }
-}
-
-/* Para mobile */
-
-@media (max-width: 480px) {
-    .header {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 15px;
-        background-color: var(--purple);
-        color: var(--white);
-    }
-
-    .nombre-app h1 {
-        font-size: 18px;
-        margin-bottom: 10px;
-    }
-
-    .menu ul {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
-        justify-content: center;
-        list-style-type: none;
-    }
-
-    .menu li {
-        font-size: 14px;
-    }
-
-    .menu a {
-        text-decoration: none;
-        color: var(--white);
-        transition: color 0.3s ease;
-    }
-
-    .menu a:hover {
-        color: var(--blue-light);
-    }
 }
