--- a/css/login.css
+++ b/css/login.css
@@ -5,10 +5,25 @@
 }
 
 /* Estilos para el modal */
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f9f9f9;
+    background-image: linear-gradient(white 1px, transparent 1px),
+        linear-gradient(to right, white 1px, transparent 1px);
+    background-size: 20px 20px;
+    overflow-y: scroll;
+    padding-right: 15px;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(9, 1fr);
+    gap: 3px;
+}
 
-#login-modal {
+
+.container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -17,53 +32,28 @@
     width: 45%;
     justify-content: center;
     align-items: center;
-    
-}
-
-.modal {
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.modal-content {
-    background-color: #fefefe;
+    margin: 5px auto;
+    margin-bottom: 50px;
     padding: 20px;
-    width: 300px;
-    height: 300px;
+    gap: 20px;
+    background: #fff;
     border: 2px dashed #000;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 
-.sign-in,
+.log-in,
 .sign-up {
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
 
-#loginButton,
-#signupButton {
+#login-Button,
+#signup-Button {
     font-size: 16px;
     color: black;
     border: none;
     cursor: pointer;
     margin-top: 10px;
 }
-
-/* Estilos para deshabilitar la interacción con el resto de la página */
-/*body .modal-open {
-/*    overflow: hidden;
-/*}
-/*
-/* Deshabilitar pointer events para el resto de la página, excepto el modal */
-/*body #content {
-/*    pointer-events: none;
-/*}
