--- a/css/styles_sketch.css
+++ b/css/styles_sketch.css
@@ -207,12 +207,13 @@ li:hover .contenido-expandido {
 /*estilos contenedores api*/
 
 .api-container {
-    max-width: 800px;
-    min-width: 85%;
-    min-height: 60vh;
+    font-size: 12px;
+    max-width: 600px;
+    min-width: 50%;
+    min-height: 30vh;
     margin: 5px auto;
     margin-bottom: 50px;
-    padding: 20px;
+    padding: 10px;
     background: #fff;
     border: 2px dashed #000;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
@@ -223,6 +224,11 @@ li:hover .contenido-expandido {
     grid-column: span 2 / span 2;
     grid-row: span 7 / span 7;
     grid-row-start: 2;
+    display: flex;
+    flex-direction: column; /* Alinea los elementos en una columna */
+    align-items: center; /* Alinea los elementos al principio del contenedor (izquierda) */
+    gap: 10px; /* Espacio entre los elementos (opcional) */
+    padding: 10px; /* Espacio interno del contenedor (opcional) */
 }
 
 #api2 {
@@ -230,8 +236,35 @@ li:hover .contenido-expandido {
     grid-row: span 7 / span 7;
     grid-column-start: 6;
     grid-row-start: 2;
+    display: flex;
+    flex-direction: column; /* Alinea los elementos en una columna */
+    align-items: center; /* Alinea los elementos al principio del contenedor (izquierda) */
+    gap: 10px; /* Espacio entre los elementos (opcional) */
+    padding: 10px; /* Espacio interno del contenedor (opcional) */
 }
 
+/* Estilos opcionales para los divs generados */
+#api1 div {
+    border: 1px solid #ddd; /* Borde del div */
+    align-items: center;
+    justify-content: center;
+    max-width: 60%;
+    padding: 10px; /* Espacio interno del div */
+    border-radius: 5px; /* Bordes redondeados del div */
+    background-color: #f9f9f9; /* Color de fondo del div */
+    width: 60%; /* Asegura que cada div ocupe todo el ancho del contenedor */
+}
+
+#api2 div {
+    border: 1px solid #ddd; /* Borde del div */
+    align-items: center;
+    justify-content: center;
+    max-width: 60%;
+    padding: 10px; /* Espacio interno del div */
+    border-radius: 5px; /* Bordes redondeados del div */
+    background-color: #f9f9f9; /* Color de fondo del div */
+    width: 60%; /* Asegura que cada div ocupe todo el ancho del contenedor */
+}
 
 /* HEADER */
 
