--- a/css/styles_sketch.css
+++ b/css/styles_sketch.css
@@ -208,8 +208,8 @@ li:hover .contenido-expandido {
     max-width: 400px;
     min-width: 30%;
     min-height: 30vh;
-    margin: 5px auto;
-    margin-bottom: 50px;
+    margin: 0 auto;
+    margin-bottom: 30px;
     padding: 10px;
     background: #fff;
     border: 2px dashed #000;
@@ -220,13 +220,14 @@ li:hover .contenido-expandido {
 #api1 {
     grid-column: span 2 / span 2;
     grid-row: span 7 / span 7;
+    grid-column-start: 1;
     grid-row-start: 2;
     display: flex;
     flex-direction: column; 
     align-items: center; 
     gap: 10px; 
     padding: 10px; 
-    max-height: 800px;
+    max-height: 600px;
     overflow: scroll;
     overflow-x: hidden;
 }
@@ -241,7 +242,7 @@ li:hover .contenido-expandido {
     align-items: center; 
     gap: 10px; 
     padding: 10px; 
-    max-height: 800px;
+    max-height: 600px;
     overflow: scroll;
     overflow-x: hidden;
 }
